# medstruct-studio

./: .gitignore  PRODUCT.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
medstruct/: __init__.py  server.py  store.py
medstruct/core/: __init__.py  cleaning.py  engine.py  llm.py  models.py  schema_lint.py  sections.py
medstruct/examples/: dirty_payload.txt  stroke_admission.txt
medstruct/schemas/: general_record_v1.json  stroke_registry_v1.json
medstruct/tests/: test_engine.py
medstruct/web/: app.js  index.html  styles.css
scripts/: audit_release.py
