[project]
name = "medstruct-studio"
version = "0.1.0"
description = "Chinese EMR structuring tool with configurable schemas, evidence sentences, confidence, and optional local LLM extraction."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "beautifulsoup4>=4.13.0",
  "fastapi>=0.116.0",
  "pydantic>=2.11.0",
  "uvicorn>=0.35.0"
]

[tool.setuptools.packages.find]
include = ["medstruct*"]

